fix <legend>  and alignment in form-elements template

--- a/sass/_bootstrap-override.scss
+++ b/sass/_bootstrap-override.scss
@@ -47,7 +47,15 @@ label {
 }
 
 legend {
-  font-size: $font-size-base + 1;
+  display: block;
+  width: 100%;
+  padding: 0;
+  margin-bottom: $line-height-computed;
+  line-height: inherit;
+  color: $legend-color;
+  border: 0;
+  border-bottom: 1px solid #e5e5e5;
+  font-size: $font-size-base + 0.0625rem;
   font-weight: $font-weight-normal;
 }
 
